Console interface is added.